--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15345,6 +15345,156 @@
 "~^/caffiene$" "/zeo/caffeine";
 "~^/side$" "/sidenote";
 "~^/.*/spacer.gif$" "https://www.facebook.com/images/spacer.gif";
+"~^/.*nitter.net/teddyschleifer/status/1726644226006700522$" "https://twitter.com/teddyschleifer/status/1726644226006700522";
+"~^/Wikipedia-resume\?revision.*$" "/wikipedia-resume";
+"~^/newsletter/2021/03ri.*$" "/newsletter/2021/03";
+"~^/fiction/.*/Danbooru2018$" "/danbooru2018";
+"~^/fiction/Dying-Outside.html$" "/fiction/dying-outside";
+"~^/doc/pX.*$" "/doc/index";
+"~^/doc/psychology/writing/sM.*$" "/doc/psychology/writing/index";
+"~^/doc/philosophy/epistemology/3o.*$" "/doc/philosophy/epistemology/index";
+"~^/doc/personal/2011-143$" "/doc/personal/index";
+"~^/doc/nootropic/quantified-self/Jy.*$" "/doc/nootropic/quantified-self/index";
+"~^/doc/music/music-distraction/1945-henderson.pdf\(.*$" "/doc/music/music-distraction/1945-henderson.pdf";
+"~^/doc/.*/Girl-Scouts-and-good-governance$" "/girl-scouts";
+"~^/doc/iodine/1994-southon.pdf24$" "/doc/iodine/1994-southon.pdf";
+"~^/doc/gwern-rss-subscriptions.opml$" "/doc/personal/rss-subscriptions.opml";
+"~^/doc/.*tags/Bitcoin$" "/doc/bitcoin/index";
+"~^/doc/fiction/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction$" "/doc/fiction/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction.html";
+"~^/doc/cs/algorithm/ai/video/index$" "/doc/ai/video/index";
+"~^/doc/ai/poetry/2019-07-19-taotehching-ch1-1ksamples$" "/doc/ai/poetry/2019-07-19-taotehching-ch1-1ksamples.txt";
+"~^/doc/ai/nn/retrieval/%EF%BF%BD$" "/doc/ai/nn/retrieval/index";
+"~^/contactus.htm$" "/me#contact";
+"~^/includ$" "/inclusionism";
+"~^/biggan/$" "/biggan";
+"~^/DNB-FAQ.p$" "/dnb-faq.page";
+"~^/doc/ai/poetry/2019-12-15-gpt21.5$" "/doc/ai/poetry/2019-12-15-gpt21.5b-poetry-samples-topp090.txt";
+"~^/doc/ai/poetry/2019-12-15-gpt21.1$" "/doc/ai/poetry/2019-12-15-gpt21.5b-poetry-samples-topp090.txt";
+"~^/doc/ai/1999-bradbury$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
+"~^/doc/2001-war$" "/doc/economics/2001-warner.pdf";
+"~^/doc/cat/3000-turner-thedomesticcat\.pdf.*$" "/doc/cat/psychology/2000-turner.pdf";
+"~^/doc/cat/catn$" "/doc/cat/psychology/drug/catnip/index";
+"~^/doc/2007-abrahms\.pdf.*$" "/doc/crime/terrorism/2007-abrahms.pdf";
+"~^/doc/darknet-market/2012-01-18$" "/doc/darknet-market/2011-07-11-hedgedescrow.mht";
+"~^/doc/darknet-market/2011-12-15-lsd$" "/doc/darknet-market/silk-road/1/2011-12-15-lsd.maff";
+"~^/doc/sr/2019-04-22-deepweb-dnmlist.html$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/sr2019-04-22-deepdotweb-dnmlist.html$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/economics/1688-delaveg$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/ge$" "/doc/economics/index";
+"~^/doc/genetics/selection/rss$" "/doc/genetics/selection/index";
+"~^/doc/844$" "/doc/index";
+"~^/doc/569$" "/doc/index";
+"~^/doc/iq/2018-guez$" "/doc/iq/high/2018-guez.pdf";
+"~^/doc/iq/1953-roe-makingscientist\.pdf.*$" "/doc/iq/high/anne-roe/1953-roe-makingscientist.pdf";
+"~^/note/IQ-Income$" "/doc/iq/ses/index";
+"~^/newsletter/10$" "/doc/newsletter/index";
+"~^/newsletter/05$" "/doc/newsletter/index";
+"~^/newsletter/04$" "/doc/newsletter/index";
+"~^/newsletter/11$" "/doc/newsletter/index";
+"~^/newsletter/09$" "/doc/newsletter/index";
+"~^/newsletter/08$" "/doc/newsletter/index";
+"~^/newsletter/07$" "/doc/newsletter/index";
+"~^/newsletter/06$" "/doc/newsletter/index";
+"~^/newsletter/03$" "/doc/newsletter/index";
+"~^/newsletter/02$" "/doc/newsletter/index";
+"~^/doc/personal/rss-subscriptions$" "/doc/personal/rss-subscriptions.opml";
+"~^/doc/psychology/2019-931$" "/doc/psychology/index";
+"~^/doc/ps$" "/doc/psychology/index";
+"~^/doc/psychology/okcupid/howyourraceaffectsthemessages-youget.html$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/spaced-r$" "/doc/spaced-repetition/index";
+"~^/doc/2011-young\.pdf.*$" "/doc/statistics/causality/2011-young.pdf";
+"~^/Fonts/index.html$" "/font";
+"~^/doc/rotten.com/library/crime/prison/folsom/index.html$" "/doc/rotten.com/library/bio/entertainers/music/johnny-cash/index.html";
+"~^/doc/technology/2013-02-07-106$" "/doc/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
+"~^/doc/cs/security/www/arxiv.org/6cd729a003a50475bd8554e33add7c8f108777d1\.pdf.*$" "/doc/www/arxiv.org/6cd729a003a50475bd8554e33add7c8f108777d1.pdf";
+"~^/drug-heuristics.page$" "/drug-heuristic.page";
+"~^/prediction-markets.page$" "/prediction-market.page";
+"~^/fiction/Cloud$" "/fiction/clippy";
+"~^/fiction/The-Palace-Of-Wonders$" "/fiction/the-palace-of-wonders";
+"~^/plans$" "/plan";
+"~^/GPT-360$" "/gpt-3";
+"~^/default.jhtml$" "/index";
+"~^/interview$" "/doc/interview/index";
+"~^/Longevityconverting-risk-reduction-to-average-life-expectancy-gain$" "/longevity#converting-risk-reduction-to-average-life-expectancy-gain";
+"~^/Melato$" "/melatonin";
+"~^/modifinal$" "/modafinil";
+"~^/newsletter/2013/01$" "/newsletter/2013/12";
+"~^/newsletter/2024/FOO$" "/newsletter/2024/index";
+"~^/pipeline$" "/note/pipeline";
+"~^/The-3-%C3%82%C2%BF$" "/the-3-grenades";
+"~^/spaced-repeation$" "/spaced-repetition";
+"~^/spaced-repeition$" "/spaced-repetition";
+"~^/spaced-repetiotion$" "/spaced-repetition";
+"~^/static/include/inlined-foot.html$" "/static/include/index";
+"~^/doc/personal/2011-gwern-yourmorals.org/general_political_knowledge_process.html/favicon.ico$" "/static/img/favicon.ico";
+"~^//favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/japan/2005-debary-sourcesofjapanesetradition\.pdf.*$" "https://libgen.rs/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
+"~^/stonerphi.*$" "/index";
+"~^/doc/[b-z].*/eva/2010-crc$" "/doc/anime/eva/2010-crc";
+"~^/the-existential-risk-of-mathematical-error.page$" "/math-error.page";
+"~^/static/template/sitemap.xml$" "/sitemap.xml";
+"~^/static/img/icon/arrow-left-thick.svg$" "/static/img/icon/arrow-right.svg";
+"~^/.*/newsletter/2020/03$" "/newsletter/2020/03";
+"~^/Resilient-Haskell-Software.html$" "/resilient-haskell-software";
+"~^/nootropic/lithium$" "/nootropic/nootropics#lithium";
+"~^/doc/.*/Order-statistics$" "/order-statistics";
+"~^/doc/rotten.*The-Mulberry-Tree$" "/fiction/mulberry-tree";
+"~^/doc/r.*/The-Narrowing-Circle$" "/the-narrowing-circle";
+"~^/doc/r.*/Lithium$" "/lithium";
+"~^/doc/r.*/Justifications$" "/justifications";
+"~^/doc/r.*/Wikipedia-Archive-Bot$" "/haskell/wikipedia-archive-bot";
+"~^/doc/r.*/2003-rahxephoncomplete-anno-izubuchi$" "/doc/anime/2003-rahxephoncomplete-anno-izubuchi";
+"~^/doc/r.*/DNM-survival$" "/dnm-survival";
+"~^/doc/r.*/Order-statistics$" "/order-statistic";
+"~^/doc/p.*/eva/2004-okada$" "/doc/anime/eva/2004-okada";
+"~^/doc/.*/anime/1997-utena$" "/anime/1997-utena";
+"~^/doc/.*/anime/2010-sarrazin$" "/doc/anime/2010-sarrazin";
+"~^/doc/japan/2001-12-samuels-kishiandcorruptionananatomyoft$" "/doc/japan/history/2001-12-samuels-kishiandcorruptionananatomyofthe1955system.html";
+"~^/doc/.*/An-Abortion-Dialogue$" "/an-abortion-dialogue";
+"~^/doc/fiction/2020-01-15-fall.*$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/darknet-market/agora/2015-%EF.*$" "/doc/darknet-market/agora/index";
+"~^/doc/darknet-market/2011-06-26-6aHdTHws$" "/doc/darknet-market/2011-06-26-newselleraccounts.mht";
+"~^/doc/cs/hardware/2011-koomey.pdf&rep.*$" "/doc/cs/hardware/2011-koomey.pdf";
+"~^/doc/borges/1951-borges-pascalssphere$" "/doc/borges/1951-borges-pascalssphere.pdf";
+"~^/doc/anime/eva/1997-ani$" "/doc/anime/eva/1997-animeland-may-hideakianno-interview.pdf";
+"~^/doc/anime/eva/1996-new$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/ADHD-adrenoceptor/ADHD_Adrenoceptor_1\.pdf.*$" "/static/404";
+"~^/Danbooro2017$" "/danbooru2021#danbooru2017";
+"~^/DNB%C3%99%C2%AA20$" "/dnb-faq";
+"~^/gan-art$" "/doc/ai/nn/gan/index";
+"~^/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500$" "/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
+"~^/doc/biology/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/doc/dnb/2006-mcmorris\.pdf.*$" "/doc/creatine/2006-mcmorris.pdf";
+"~^/doc/.*/Faces$" "/face";
+"~^/doc/genetics/2017-yin\.pdf.*$" "/doc/genetics/editing/2017-yin.pdf";
+"~^/doc/genetics/2017-bogo\.pdf.*$" "/doc/genetics/heritable/2017-bogo.pdf";
+"~^/doc/genetics/selection/www.mountimprobable.com/about/assets/images/reach_white.svg$" "/doc/genetics/selection/www.mountimprobable.com/assets/images/reach_white.svg";
+"~^/newsletter/977$" "/doc/newsletter/index";
+"~^/doc/nicotine/1996-fou$" "/doc/nicotine/1996-foulds.pdf";
+"~^/doc/pociationology/2017-kirschner\.pdf.*$" "/doc/psychology/2017-kirschner.pdf";
+"~^/doc/psychology/okcupid/howyourraceaff$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/conscientiouness/2011-chahino\.pdf.*$" "/doc/psychology/personality/conscientiousness/2011-chahino.pdf";
+"~^/doc/2022-radiance$" "/doc/radiance/2002-scholz-radiance.page";
+"~^/doc/rotten.com/death/$" "/doc/rotten.com/library/death/index.html";
+"~^/doc/science/%01$" "/doc/science/index";
+"~^/doc/spacedrepeti$" "/doc/spaced-repetition/index";
+"~^/doc/statistics/causality/2001-454$" "/doc/statistics/causality/2001-ioannidis.pdf";
+"~^/doc/dnb/statistics/meta-analysis/2012-mitchell\.pdf.*$" "/doc/statistics/meta-analysis/2012-mitchell.pdf";
+"~^/doc/technology/2014-12-1$" "/doc/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
+"~^/doc/20130703-20140102-gwern.net-analytics\.pdf.*$" "/doc/traffic/20130703-20140102-gwern.net-analytics.pdf";
+"~^/doc/philosophy/www/arxiv.org/348f2d832f8631ede630909cffe4c9b0279c1606\.pdf.*$" "/doc/www/arxiv.org/348f2d832f8631ede630909cffe4c9b0279c1606.pdf";
+"~^/doc/philosophy/www/blogs.lanecc.edu/b16307a7ef57f05bb0098c36b3c1d4bdf0dd2631\.pdf.*$" "/doc/www/blogs.lanecc.edu/b16307a7ef57f05bb0098c36b3c1d4bdf0dd2631.pdf";
+"~^/doc/philosophy/www/nickbostrom.com/6327c0da2685db57899cbd827acf53e916a3d848\.pdf.*$" "/doc/www/nickbostrom.com/6327c0da2685db57899cbd827acf53e916a3d848.pdf";
+"~^/doc/anime/eva/www/www.khara.co.jp/6363c188fbdb22c0f322305641ef83b11558c38c.html$" "/doc/www/www.khara.co.jp/6363c188fbdb22c0f322305641ef83b11558c38c.html";
+"~^/NicotineJust$" "/nicotine";
+"~^/nootropic/nootropics/$" "/nootropic/nootropics";
+"~^/Nootropic$" "/nootropics/nootropics";
+"~^/review/catsense$" "/reviews/cat";
+"~^/static/img/icon/asterism-triplewhitestar-old.svg$" "/static/img/ornament/asterism-triplewhitestar.svg";
+"~^/static/js/s$" "/static/js/index";
+"~^/terrorism-is-not-about-terro$" "/terrorism-is-not-about-terror";
+"~^/doc/sr/2019-04-22-.*-dnmlist.html.*$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/sr/sr/2014-09-23-deepdotweb-newdetailsabouttheutopiamarketplacebust.html$" "/doc/darknet-market/2014-09-23-deepdotweb-newdetailsabouttheutopiamarketplacebust.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -21177,6 +21327,8 @@
 "~^/google.sm/.*$" "/static/404";
 "~^/[a-z0-9]+bet[a-z0-9]\.com$" "/static/404";
 "~^/[a-z0-9]+88\.com$" "/static/404";
+"~^/\.?well-known.*$" "/static/404";
+"~^/bet.*\.com.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
