--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -10009,3 +10009,4 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-4.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-4.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-5.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-5.jpg";
 "~^/doc/cs/2011-08-14-williamyu-mentalrngs.html.*$" "/doc/cs/cryptography/2011-08-14-williamyu-mentalrngs.html";
+"~^/note/suzanne-delage.*$" "/suzanne-delage";
