+; IW: +162 disambiguation fixes

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14858,10 +14858,10 @@
 "~^/[NnMm]emex.*" "/nenex";
 "~^/[NnMm]emnex.*" "/nenex";
 "~^/[NnMm]enmex.*" "/nenex";
-"~^/[Ee]lon-[Mm]usk.*$" "/note/musk";
-"~^/[Mm]usk-.*$" "/note/musk";
-"~^/note/[Ee]lon.*$" "/note/musk";
-"~^/note/Musk.*$" "/note/musk";
+"~^/[Ee]lon-[Mm]usk.*$" "/note/elon-musk";
+"~^/[Mm]usk-.*$" "/note/elon-musk";
+"~^/note/Elon.*$" "/note/elon-musk";
+"~^/note/[Mm]usk.*$" "/note/elon-musk";
 "~^/doc/technology/2008-horizons\.pdf.*$" "/static/404";
 "~^/goopromarketin.*$" "/static/404";
 "~^/doc/anie/1978-hosaka\.pdf.*$" "/doc/anime/1978-nosaka.pdf";
@@ -15495,6 +15495,79 @@
 "~^/terrorism-is-not-about-terro$" "/terrorism-is-not-about-terror";
 "~^/doc/sr/2019-04-22-.*-dnmlist.html.*$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
 "~^/doc/sr/sr/2014-09-23-deepdotweb-newdetailsabouttheutopiamarketplacebust.html$" "/doc/darknet-market/2014-09-23-deepdotweb-newdetailsabouttheutopiamarketplacebust.html";
+
+"~^/doc/psychology/2019-01-21-eric-socksurvey$" "/doc/psychology/2019-01-21-eric-socksurvey.csv";
+"~^/doc/dnb/2012-shipstead.pdMelby-Lervag.*$" "/doc/dnb/2012-shipstead.pdf";
+"~^/doc/psychology/writing/2018-10-0$" "/doc/psychology/writing/";
+"~^/static/build/build_css.php$" "/static/build/build_mode_css.php";
+"~^/sicp/Chapter-%C3%82.*$" "/sicp/index";
+"~^/.*/haskell/Wikipedia-Archive-Bot$" "/haskell/wikipedia-archive-bot";
+"~^/.*/Dinosaur-Comics$" "/fiction/dinosaur-comics";
+"~^/gpt-3-nonfictioncalibration$" "/gpt-3-nonfiction#calibration";
+"~^/doc/statistics/%C3%83%C6.*$" "/doc/statistics/index";
+"~^/doc/rotten..*/In-Defense-Of-Inclusionism$" "/in-defense-of-inclusionism";
+"~^/doc/rotten..*/Cloud-Nine$" "/cloud-nine";
+"~^/doc/rotten..*/Charity-is-not-about-helping$" "/charity-is-not-about-helping";
+"~^/doc/rotten..*/Archiving-GitHub$" "/archiving-github";
+"~^/doc/psychology/writing/%C3.*$" "/doc/psychology/writing/index";
+"~^/doc/psychology/howyourraceaffectsthemessagesyouget$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/psychology/2019-vanhiel.pdf%C3.*$" "/doc/psychology/2019-vanhiel.pdf";
+"~^/doc/melatonin/index_files.*$" "/doc/melatonin/index";
+"~^/doc/japan/history/tominaga-nakamoto/1998-faure-redthread-ch3\.pdf.*$" "/doc/japan/history/tominaga-nakamoto/1998-faure-redthread-ch4.pdf";
+"~^/doc/history/2019-09-18-medievalindonesia-thelandshuterhochzeit1475$" "/doc/history/2019-09-18-medievalindonesia-thelandshuterhochzeit1475.html";
+"~^/doc/ffv.*$" "/doc/index";
+"~^/doc/feed.xml$" "https://gwern.substack.com/feed";
+"~^/doc/ai/poetry/x2019-10-17-117m-poetry-cleanprojectgutenberg-samples.txt$" "/doc/ai/poetry/2019-10-17-117m-poetry-cleanprojectgutenberg-samples.txt";
+"~^/doc/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100Fr.*$" "/doc/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/doc/ai/1999-bradbury-matrio$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
+"~^/Choosing-Software\?.*$" "/choosing-software";
+"~^/AI-complete-list$" "/index#ai";
+"~^/NAeh$" "/index";
+"~^/colder-Wars$" "/colder-wars";
+"~^/religion$" "/doc/philosophy/religion-index";
+"~^/neptune$" "https://en.wikipedia.org/wiki/Neptune";
+"~^/Danboru2021$" "/danbooru2021";
+"~^/doc/ai/poetry/2019-03$" "/doc/ai/poetry/index";
+"~^/doc/biology/2000-iapac-norvir/tolerability/ask.html$" "/doc/biology/2000-iapac-norvir/ask.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/search.html$" "/doc/biology/2000-iapac-norvir/search.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/dejar_alc.html$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/farthing.html$" "/doc/biology/2000-iapac-norvir/tolerability/farthing.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/royaltips.html$" "/doc/biology/2000-iapac-norvir/tolerability/royaltips.html";
+"~^/doc/darknet-market/2011-10$" "/doc/darknet-market/index";
+"~^/doc/genetics/genetics/2016-nordstrom\.pdf.*$" "/doc/genetics/2016-nordstrom.pdf";
+"~^/doc/iq/1971-cattell-abilitiestheirstructuregrowthaction$" "/doc/iq/1971-cattell-abilitiestheirstructuregrowthaction.pdf";
+"~^/doc/modafinil/darknet-market/2015-07$" "/doc/modafinil/darknet-market/";
+"~^/doc/psychology/nature/2010-peen.pdf\\.*$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.ht$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/psychology/1986-kellogg\.pdf.*$" "/doc/psychology/writing/1986-kellogg.pdf";
+"~^/doc/rotten.library$" "/doc/rotten.com/library/index.html";
+"~^/doc/dnb/1987-pocock\.pdf.*$" "/doc/statistics/meta-analysis/1987-pocock.pdf";
+"~^/doc/darknet-market/www/www.cl.cam.ac.uk/0c7f074d72d1731b502bc05288ca193cc7b143f8\.pdf.*$" "/doc/www/www.cl.cam.ac.uk/0c7f074d72d1731b502bc05288ca193cc7b143f8.pdf";
+"~^/Muggin-DP$" "/mugging-dp";
+"~^/Phenibut$" "/nootropics#phenibut";
+"~^/Book$" "/review/book";
+"~^/The-3-%C3%83%C2%B0$" "/the-3-grenades";
+"~^/st$" "/static/index";
+"~^/spaced-repatition$" "/spaced-repetition";
+"~^/Start$" "/startup-idea";
+"~^/static/build/build/Utils.hs$" "/static/build/Utils.hs";
+"~^/doc/www/misc/favicon.ico$" "/static/img/favicon.ico";
+"~^/Turing--complete$" "/turing-complete";
+"~^/Turing-com$" "/turing-complete";
+"~^/feedback$" "https://docs.google.com/forms/d/17cNf0ohMHKeTwmUM_V_hDVkirjsf8HLMWsJco8gt2Eg/viewform";
+"~^/.*1963-vonwright-thevarietiesofgoodness.*$" "https://libgen.rs/search.php?req=%20The%20Varieties%20of%20Goodness%20";
+"~^/.*cag.lcs.mit.edu/pub/dm/papers/mazieres:pnym.*$" "/doc/cs/cryptography/1998-mazieres.pdf";
+"~^/[Ee]ssay$" "/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -21259,7 +21332,7 @@
 "~^/invoke/.*$" "/static/404";
 "~^/[a-z]+\.sh$" "/static/404"; # /test.sh, /reminder.sh etc
 "~^/.*88\.xyz.*$" "/static/404";
-"~^/.*/.*/service\.jsp(;|%0a)+.*\.css$" "";
+"~^/.*/.*/service\.jsp(;|%0a)+.*\.css$" "/static/404";
 "~^/[a-z]+bet\.com$" "/static/404";
 "~^/[a-z]+bet\.com/.*$" "/static/404";
 "~^/Filemgr/.*$" "/static/404";
@@ -21329,6 +21402,11 @@
 "~^/[a-z0-9]+88\.com$" "/static/404";
 "~^/\.?well-known.*$" "/static/404";
 "~^/bet.*\.com.*$" "/static/404";
+"~^/lotto.*\.com.*$" "/static/404";
+"~^/.*preiposwap.*$" "/static/404";
+"~^/DoInfo/.*$" "/static/404";
+"~^/.*AddInfo.php.*$" "/static/404";
+"~^/.*linklist\.bio.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
