--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -844,7 +844,7 @@ server {
         rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
         rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).+$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
         rewrite ^/(?<page>doc/psychology/.*)\.htm$ /$page.html permanent;
-        rewrite ^/(?<old>.*\.pdf)(Just|this|it|there|as|you|me|if|on|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please|replydelete)$ /$old permanent;
+        rewrite ^/(?<old>.*\.pdf)(Just|this|it|there|as|you|me|if|on|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please|replydelete|[Hh]e|[Ss]he)$ /$old permanent;
         rewrite ^/(?<hs>static/build/.*)\.hi$ /$hs.hs permanent;
         rewrite ^/(?<hs>static/build/.*)\.o$  /$hs.hs permanent;
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
@@ -856,6 +856,7 @@ server {
         rewrite ^/(?<original>.*)\[.*$ /$original permanent;
         rewrite ^/(?<original>.*)\].*$ /$original permanent;
         rewrite ^/\./(?<original>.*)$ /$original permanent;
+        rewrite ^/\./(?<original>.*)%7C4$ /$original permanent;
         rewrite ^/doc/psychology/european-journal-of-parapsychology/(?<original>.*)$ /doc/psychology/parapsychology/european-journal-of-parapsychology/$original permanent;
         rewrite ^/doc/www/i.reddit.com/(?<old>.*)$ /doc/www/old.reddit.com/$old permanent;
         rewrite ^/doc/reinforcement-learning/brain-imitation-learning/(?<old>.*)$ /doc/reinforcement-learning/imitation-learning/brain-imitation-learning/$old permanent;
@@ -960,7 +961,8 @@ server {
         rewrite ^/metadata/annotation/(?<base>.*)/\%\2\f(?<original>.*)$ /metadata/annotation/$base/$2F$original permanent;
         rewrite /protein/(?<protein>.*)$ https://www.ncbi.nlm.nih.gov/protein/$protein permanent;
         rewrite /doc/[a-z]+/www/(?<mirror>.*\..*/[a-z0-9]+\.html)$ /doc/www/$mirror permanent;
-        rewrite /doc/?<original>.*/index\.xml$ /doc/$original/index permanent;
+        rewrite /?<original>.*/index\.xml$ /$original/index permanent;
+        rewrite /?<original>.*/div$ /$original/index permanent;
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
