refactored Midjourney files

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15634,6 +15634,9 @@
 "~^/Selection/$" "/selection";
 "~^/Subscripts/$" "/subscript";
 "~^/Redshift$" "/zeo/redshift";
+"~^/doc/ai/nn/scaling/mixture-of-experts/index.*$" "/doc/ai/scaling/mixture-of-experts/index";
+"~^/doc/ai/nn/scaling/mixture-of-expert/index.*$" "/doc/ai/scaling/mixture-of-experts/index";
+"~^/doc/ai/scaling/mixture-of-expert/index.*$" "/doc/ai/scaling/mixture-of-experts/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
