+; update link-lives

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15495,7 +15495,6 @@
 "~^/terrorism-is-not-about-terro$" "/terrorism-is-not-about-terror";
 "~^/doc/sr/2019-04-22-.*-dnmlist.html.*$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
 "~^/doc/sr/sr/2014-09-23-deepdotweb-newdetailsabouttheutopiamarketplacebust.html$" "/doc/darknet-market/2014-09-23-deepdotweb-newdetailsabouttheutopiamarketplacebust.html";
-
 "~^/doc/psychology/2019-01-21-eric-socksurvey$" "/doc/psychology/2019-01-21-eric-socksurvey.csv";
 "~^/doc/dnb/2012-shipstead.pdMelby-Lervag.*$" "/doc/dnb/2012-shipstead.pdf";
 "~^/doc/psychology/writing/2018-10-0$" "/doc/psychology/writing/";
@@ -15637,6 +15636,91 @@
 "~^/doc/ai/nn/scaling/mixture-of-experts/index.*$" "/doc/ai/scaling/mixture-of-experts/index";
 "~^/doc/ai/nn/scaling/mixture-of-expert/index.*$" "/doc/ai/scaling/mixture-of-experts/index";
 "~^/doc/ai/scaling/mixture-of-expert/index.*$" "/doc/ai/scaling/mixture-of-experts/index";
+"~^/.*/docs/eva/1997-animeland-may-hideakianno-interview-french$" "/doc/eva/1997-animeland-may-hideakianno-interview-french";
+"~^/doc/science/%EF.*$" "/doc/science/index";
+"~^/doc/biology/Jackson.*$" "/doc/biology/index";
+"~^/doc/ai/2020-openai-gpt-3/Gpt-3.5-turing-interraction\.pdf.*$" "";
+"~^/japanese/2002-gibson$" "/doc/japan/art/2002-gibson";
+"~^/haskell/Google-Sum-mer-of-Code$" "/haskell/summer-of-code";
+"~^/GAN---Nvidia-StyleGAN-Playground$" "/face";
+"~^/doc/www.reddit.com/r/420Dating101/comments/1ahomls/is_smoking_weed_a_deal_breaker_in_a_relationship/$" "/static/404";
+"~^/doc/UZ.*$" "/doc/index";
+"~^/doc/S2.*$" "/doc/index";
+"~^/doc/psychology/okcupid/the4bigmythofprofilepictures.com$" "/doc/psychology/okcupid/the4bigmythsofprofilepictures.html";
+"~^/doc/psychology/okcupid/%C3%83%C2%B0$" "/doc/psychology/okcupid/index";
+"~^/doc/nootropic/quantified-self/2014-%C3%82%C2%BF$" "/doc/nootropic/quantified-self/2014-08-03-lllt-correlation.csv";
+"~^/doc/.*/Ads$" "/ad";
+"~^/doc/.*/Subscripts$" "/subscript";
+"~^/doc/.*/SMPY$" "/smpy";
+"~^/doc/.*/Justifications$" "/justification";
+"~^/doc/.*/Catnip$" "/catnip";
+"~^/doc/iq/1969-snow.htmlSocial$" "/doc/iq/1969-snow.html";
+"~^/doc/fiction/2009-12-18-%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD$" "/doc/anime/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar";
+"~^/doc/ai/poetry/2019-iA5.*$" "/doc/ai/poetry/index";
+"~^/doc/ai/1962Neb.*$" "/doc/ai/1962-bryson.pdf";
+"~^/ai.txt\?.*$" "/index#ai";
+"~^/doc/rss$" "/https://gwern.substack.com/feed";
+"~^/a\?.*$" "/index#ai";
+"~^/Bitcoin-is$" "/bitcoin-is-worse-is-better";
+"~^/Bitcoin-i$" "/bitcoin-is-worse-is-better";
+"~^/dabooru2021$" "/danbooru2021";
+"~^/doc/cs/algorithm/ai/nn/vae/index$" "/doc/ai/nn/vae/index";
+"~^/doc/economics/1688-dela$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/fiction/1992-jordan.E$" "/doc/fiction/science-fiction/1992-jordan.pdf";
+"~^/doc/genetics/genetics/2016-hjelmborg.pdf/doc/genetics/1991-helbig\.pdf.*$" "/doc/genetics/selection/artificial/1991-helbig.pdf";
+"~^/dorc/psychology/nature/2010-peen\.pdf.*$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/doc/psychology/okcupid/yourlooksandyourinbox/.html$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
+"~^/doc/1993-ericsson-deliberatepractice$" "/doc/psychology/writing/1993-ericsson.pdf";
+"~^/doc/reinforcement-learning/model-free/1963-mic$" "/doc/reinforcement-learning/model-free/1963-michie.pdf";
+"~^/doc/to/2017-silver\.pdf.*$" "/doc/reinforcement-learning/model/alphago/2017-silver.pdf";
+"~^/doc/ai/nn/diffusion/www/old.reddit.com/fd4f5d0bb3d6204a7239b559a665b487429d47f3.html$" "/doc/www/old.reddit.com/fd4f5d0bb3d6204a7239b559a665b487429d47f3.html";
+"~^/GPT-3L$" "/gpt-3";
+"~^/doc/feed$" "https://gwern.substack.com/feed";
+"~^/Music$" "/music-distraction";
+"~^/review/culturalrevolution$" "/reviews/cultural-revolution";
+"~^/wiki$" "/index";
+"~^/newsletter/static/font/SourceSerifPro-BASIC-SemiboldItalic.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-SemiboldItalic.ttf";
+"~^/layout.js$" "/static/js/layout.js";
+"~^/misc.js$" "/static/js/misc.js";
+"~^/Turing-comple$" "/turing-complete";
+"~^/heritable$" "/doc/genetic/heritable/index";
+"~^/doc/rss.xml$" "https://gwern.substack.com/feed";
+"~^/doc/.*/[Tt]iming$" "/timing";
+"~^/image$" "/doc/index";
+"~^/doc/ai/poetry/2019-12-15-gpt21\.0.*$" "/doc/ai/poetry/2019-12-15-gpt21.5b-poetry-samples-topp090.txt";
+"~^/static/build/build_versioned_includes.php$" "/static/build/index";
+"~^/doc/.*/GoodReads$" "/goodreads";
+"~^/doc/nootropics-nicotine-trainingeffect-linearmodel.png$" "/doc/nootropic/gwern-nicotine-trainingeffect-linearmodel.png";
+"~^/If-On-a-Winter.*$" "https://en.wikipedia.org/wiki/If_on_a_winter%27s_night_a_traveler";
+"~^/doc/technology/%EF.*$" "/doc/technology/index";
+"~^/doc/spaced-repetition-scumbag-brain.png$" "/doc/psychology/spaced-repetition/2013-gwern-meme-scumbagbrain.jpg";
+"~^/doc/science/1973-drake.pdfKole.*$" "/doc/science/1973-drake.pdf";
+"~^/doc/rotten.com/library/index.html--Some.*$" "/doc/rotten.com/library/index.html";
+"~^/doc/rotten.com/library/bio/religion/popes/worst-papal-names/index$" "/doc/rotten.com/library/bio/religion/popes/worst-papal-names/index.html";
+"~^/doc/radiance/index_split_019.html$" "/doc/radiance/index";
+"~^/doc/psychology/personality/conscientiousness/2004-irani$" "/doc/psychology/personality/conscientiousness/2004-irani.pdf";
+"~^/doc/nicotine/2007-villegier$" "/doc/nicotine/2007-villegier.pdf";
+"~^/doc/iq/2020-grasby.pdfz$" "/doc/iq/2020-grasby.pdf";
+"~^/doc/economics/2008-josephso$" "/doc/economics/2008-josephson.pdf";
+"~^/doc/crime/terrorism/2006-abrahms.pd%5Cf$" "/doc/crime/terrorism/2006-abrahms.pdf";
+"~^/doc/cat/catnip/survey/$" "/doc/cat/psychology/drug/catnip/survey/index";
+"~^/doc/biology/2000-iapac-norvir/contact.html$" "https://web.archive.org/web/20020605052630/http://iapac.org:80/about/contact.html";
+"~^/doc/ai/poetry/2019-12-16-Uy5.*$" "/doc/ai/poetry/2019-12-16-gpt21.5b-poetry-samples-topp080.txt";
+"~^/doc/1996-anime...cience-otaking$" "/doc/anime/eva/1996-animerica-conscience";
+"~^/archiving.Since$" "/archiving";
+"~^/doc/cs/2008-drepper\.pdf.*$" "/doc/cs/hardware/2007-drepper.pdf";
+"~^/tnaks$" "/tanks";
+"~^/doc/iq/2018-pl$" "/doc/iq/2018-plomin.pdf";
+"~^/doc/2011-gwern-yourmorals.org/ECRshort_process.html$" "/doc/personal/2011-gwern-yourmorals.org/ECRshort_process.html";
+"~^/doc/psychology/2006-02-%C3%B0$" "/doc/psychology/index";
+"~^/doc/psychology/okcupi$" "/doc/psychology/okcupid/";
+"~^/doc/technology/data$" "/doc/technology/index";
+"~^/doc/www/andrewmayneblog.wordpress.com/4691181b0cc65c6b92f3845e5ae23800b59ce293.html$" "/doc/www/andrewmayne.com/4691181b0cc65c6b92f3845e5ae23800b59ce293.html";
+"~^/Lorem-1.*$" "/lorem";
+"~^/Mail--delivery$" "/mail-delivery";
+"~^/doc/silk$" "/doc/darknet-market/silk-road/index";
+"~^/sicp/chapter-1.3$" "/sicp/1-3";
+"~^/doc/www/www.historycooperative.org/.*.html/favicon.ico$" "https://www.historycooperative.org/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -21476,6 +21560,19 @@
 "~^/DoInfo/.*$" "/static/404";
 "~^/.*AddInfo.php.*$" "/static/404";
 "~^/.*linklist\.bio.*$" "/static/404";
+"~^/.*slot88.*$" "/static/404";
+"~^/dana-na/.*$" "/static/404";
+"~^/.*saml-logout.*$" "/static/404";
+"~^/membermember/.*$" "/static/404";
+"~^/pananmuay.com.*$" "/static/404";
+"~^/gamepananhuay.com.*$" "/static/404";
+"~^/.*jptowing.ca.*$" "/static/404";
+"~^/.*hentaiworld.su.*$" "/static/404";
+"~^/shorturl.*$" "/static/404";
+"~^/pan[a-z]+\.com.*$" "/static/404";
+"~^/.*/admin\.asp.*$" "/static/404";
+"~^/.*/index\.asp.*$" "/static/404";
+"~^/.*/Urban/min/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
