testing: begin enforcing checks of configs' URL/domain validity and related properties

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -10728,3 +10728,4 @@ default "";
 "~^/doc/anime/eva/2002-takeda-notenkimemoirs$" "/doc/anime/eva/notenki-memoirs/2002-takeda-notenkimemoirs";
 "~^/doc/cs/cryptography/permutationexample.png.*$" "/doc/cs/cryptography/nash/permutationexample.png";
 "~^/doc/anime/eva/2002-takeda-notenkimemoirs.pdf.*$" "/doc/anime/eva/notenki-memoirs/2002-takeda-notenkimemoirs.pdf";
+"~^/doc/existential-risk/guillotine.png.*$" "/doc/existential-risk/1985-hofstadter-guillotine.png";
