--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -10729,3 +10729,7 @@ default "";
 "~^/doc/cs/cryptography/permutationexample.png.*$" "/doc/cs/cryptography/nash/permutationexample.png";
 "~^/doc/anime/eva/2002-takeda-notenkimemoirs.pdf.*$" "/doc/anime/eva/notenki-memoirs/2002-takeda-notenkimemoirs.pdf";
 "~^/doc/existential-risk/guillotine.png.*$" "/doc/existential-risk/1985-hofstadter-guillotine.png";
+"~^/doc/biology/2024-kallas-figure2-survivalcurveofdengueinfectionwithbutantandenguevaccine.png.*$" "/doc/biology/2024-kallas-figure2-survivalcurveofdengueinfectionwithbutantandenguevaccine.jpg";
+"~^/doc/sociology/2023-yang-3-figure3-funnelplot.png.*$" "/doc/sociology/2023-yang-3-figure3-funnelplot.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-dropcat-uppercasecapitallettertcursiveitalic.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-dropcat-uppercasecapitallettertcursiveitalic.jpg";
+"~/doc/www/openarchive.ki.se/0f825aa17f149f78075ea84cdc5e03864d6b97b8.*$" "/doc/crime/2014-latvala.pdf";
